Removes width setting to prevent stretching

--- a/app/assets/stylesheets/external/welcome.css.scss
+++ b/app/assets/stylesheets/external/welcome.css.scss
@@ -83,7 +83,6 @@ body.pages-welcome.landing {
         padding: 2.5% 11.2% 6.1% 11.6%;
         position: relative;
         img {
-          width: 100%;
         }
       }
     }
